# ChangeLog for www-apps/froxlor
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Apr 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.4.ebuild, froxlor-9999.ebuild:
  fixup bind permissions, bug 135

  10 Apr 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.4.ebuild, froxlor-9999.ebuild:
  add pl to linguas, drop app-arch/unzip depend, we just expect people to
  have a non-broken php version around

*froxlor-0.9.4 (05 Apr 2010)

  10 Apr 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.4.ebuild, froxlor-9999.ebuild:
  add AWStats useflag

  05 Apr 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.3.ebuild, +froxlor-0.9.4.ebuild:
  version bump, remove old

  25 Mar 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.3.ebuild, froxlor-9999.ebuild:
  adding ability to define the docroot in /etc/make.conf with
  FROXLOR_DOCROOT

  18 Mar 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.3.ebuild, froxlor-9999.ebuild:
  add note for cron changes and fix messed up quoting

  16 Mar 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.3.ebuild, froxlor-9999.ebuild:
  call epatch_user, fixes #65

*froxlor-0.9.3 (14 Mar 2010)

  14 Mar 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.2.1.ebuild, +froxlor-0.9.3.ebuild:
  version bump, remove old

  02 Mar 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.2.1.ebuild, froxlor-9999.ebuild:
  fixup installation from $FILESDIR just copy its contents to /usr/share to
  make pkg_config(); install its files

*froxlor-0.9.2.1 (02 Mar 2010)

  02 Mar 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.2.ebuild, +froxlor-0.9.2.1.ebuild:
  version bump, remove old

*froxlor-0.9.2 (01 Mar 2010)

  01 Mar 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.1.ebuild, +froxlor-0.9.2.ebuild:
  version bump, remove old
